<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.cristianmanoliu</groupId>
  <artifactId>neetcode</artifactId>
  <packaging>pom</packaging>
  <version>1.0-SNAPSHOT</version>
  <modules>
    <module>neetcode-150</module>
  </modules>

  <properties>
    <maven.compiler.release>25</maven.compiler.release>
    <maven.compiler.source>25</maven.compiler.source>
    <maven.compiler.target>25</maven.compiler.target>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <artifactId>log4j-api</artifactId>
        <groupId>org.apache.logging.log4j</groupId>
        <version>2.20.0</version>
      </dependency>
      <dependency>
        <artifactId>log4j-core</artifactId>
        <groupId>org.apache.logging.log4j</groupId>
        <version>2.20.0</version>
      </dependency>
      <dependency>
        <artifactId>log4j-slf4j-impl</artifactId>
        <groupId>org.apache.logging.log4j</groupId>
        <version>2.20.0</version>
      </dependency>
      <dependency>
        <artifactId>junit-jupiter</artifactId>
        <groupId>org.junit.jupiter</groupId>
        <scope>test</scope>
        <version>5.9.2</version>
      </dependency>
      <dependency>
        <artifactId>assertj-core</artifactId>
        <groupId>org.assertj</groupId>
        <scope>test</scope>
        <version>3.24.2</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

</project>
